; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_router.c_mlxsw_sp_fib_entry_offload_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_router.c_mlxsw_sp_fib_entry_offload_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_sp_fib_entry = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlxsw_sp_fib_entry*)* @mlxsw_sp_fib_entry_offload_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mlxsw_sp_fib_entry_offload_set(%struct.mlxsw_sp_fib_entry* %0) #0 {
  %2 = alloca %struct.mlxsw_sp_fib_entry*, align 8
  store %struct.mlxsw_sp_fib_entry* %0, %struct.mlxsw_sp_fib_entry** %2, align 8
  %3 = load %struct.mlxsw_sp_fib_entry*, %struct.mlxsw_sp_fib_entry** %2, align 8
  %4 = getelementptr inbounds %struct.mlxsw_sp_fib_entry, %struct.mlxsw_sp_fib_entry* %3, i32 0, i32 0
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  switch i32 %9, label %16 [
    i32 129, label %10
    i32 128, label %13
  ]

10:                                               ; preds = %1
  %11 = load %struct.mlxsw_sp_fib_entry*, %struct.mlxsw_sp_fib_entry** %2, align 8
  %12 = call i32 @mlxsw_sp_fib4_entry_offload_set(%struct.mlxsw_sp_fib_entry* %11)
  br label %16

13:                                               ; preds = %1
  %14 = load %struct.mlxsw_sp_fib_entry*, %struct.mlxsw_sp_fib_entry** %2, align 8
  %15 = call i32 @mlxsw_sp_fib6_entry_offload_set(%struct.mlxsw_sp_fib_entry* %14)
  br label %16

16:                                               ; preds = %1, %13, %10
  ret void
}

declare dso_local i32 @mlxsw_sp_fib4_entry_offload_set(%struct.mlxsw_sp_fib_entry*) #1

declare dso_local i32 @mlxsw_sp_fib6_entry_offload_set(%struct.mlxsw_sp_fib_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
